<resources>

    <color name="actionbar_text">#ffffff</color>
    <color name="actionbar_color">#8e1413</color>
    <color name="actionbartab_color">#8e1413</color>
    <color name="actionbartab_inactive">#8e1413</color>
    <color name="actionbartab_active">#3786d8</color>
    <color name="text_color">#000000</color>
    <color name="text_color_light">#555555</color>

    <string name="app_name">MyEcoTracker</string>
    <string name="app_long_name">My Economy Tracker</string>

    <string name="action_settings">Settings</string>
    <string name="action_info">About</string>

    <string name="monthlyreport">Monthly report</string>
    <string name="title_activity_newreg">New record</string>
    <string name="title_activity_account_list">Accounts</string>
    <string name="title_activity_new_account">New account</string>
    <string name="title_activity_edit_account">Edit account</string>
    <string name="title_activity_entity_list">Suppliers</string>
    <string name="title_activity_entity_edit">Edit supplier</string>
    <string name="title_activity_new_entity">New supplier</string>
    <string name="title_activity_new_category">New category</string>

    <string name="type_expense">Expense</string>
    <string name="type_income">Income</string>
    <string name="none">None</string>

    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="balance">Balance</string>
    <string name="mese">Month</string>

    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="entity">Supplier</string>
    <string name="entities">Suppliers</string>
    <string name="account">Account</string>
    <string name="accounts">Accounts</string>
    <string name="record">Record</string>
    <string name="records">Records</string>
    <string name="datefrom">From date</string>
    <string name="dateto">To date</string>
    <string name="amountfrom">Min amount</string>
    <string name="amountto">Max amount</string>
    <string name="any">Any</string>
    <string name="location">Location</string>

    <string name="save">Save</string>
    <string name="create">New</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>

    <string name="baddate">Invalid date</string>
    <string name="badamount">Invalid amount</string>
    <string name="baddescription">Invalid description</string>
    <string name="amountzero">Invalid amount</string>
    <string name="saved">Saved!</string>
    <string name="deleted">Deleted!</string>
    <string name="notavailable">Not available</string>
    <string name="enablegps">Enable GPS for records</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="categories">Categories</string>
    <string name="title_activity_record_list">Records</string>
    <string name="title_activity_time_report">Report</string>

    <string name="report_section_day">Day</string>
    <string name="report_section_week">Week</string>
    <string name="report_section_month">Month</string>
    <string name="report_section_week_bd">Weekly breakdown</string>
    <string name="report_section_month_bd">Monthly breakdown</string>

    <string name="notes">Notes</string>
    <string name="exists_already">This already exists!</string>

    <string name="account_delete_warning">Do you want to delete the account and all of its records? Warning: this action cannot be reverted!</string>
    <string name="entity_delete_warning">Do you want to delete the supplier and all of its records? Warning: this action cannot be reverted!</string>
    <string name="category_delete_warning">Do you want to delete the category? Warning: this action cannot be reverted!</string>
    <string name="record_delete_warning">Do you want to delete this record? Warning: this action cannot be reverted!</string>
    <string name="alert_warning">Warning</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>

    <string name="title_activity_info">About</string>

    <string name="copyright">© 2015 Stefano Rivoir</string>
    <string name="offer">MyEcoTracker is free. If you like this app and find it useful, you can always make a free offer with PayPal to: rs4000@gmail.com</string>
    <string name="credits">Credits for app icon goes to http://iconleak.com\nCredits for icon set goes to http://icons8.com</string>
    <string name="version">Version</string>

    <string name="db_account_others">Other expense</string>
    <string name="db_entity_others">Other supplier</string>

    <string name="backup">Backup</string>
    <string name="backup_complete">Backup complete!</string>
    <string name="restore">Restore</string>
    <string name="restore_complete">Restore complete!</string>
    <string name="title_activity_search">Search</string>

    <string name="title_search_param">Parameters</string>
    <string name="title_search_results">Results</string>
    <string name="title_activity_category_list">Categories</string>

    <string name="title_activity_category_edit">Edit category</string>
    <string name="title_activity_intro">Welcome</string>

    <string name="go_ahead">Ok, go ahead</string>

    <string name="intro_accounts">Welcome to MyEcoTracker. The first thing you should know about are the \'accounts\': these holds your expenses and your
        incomes, and you can create as many as you want. For example \'Fuel\', \'Car maintenance\', \'Insurance\'.\n\n
        Press the \'OK\' button and I will create them for you.
    </string>

    <string name="intro_categories">Each account you create can be assigned one or more categories: those will help you keep the accounts that refer to the same
        subject together. For example a category \'Car\' could be applied to the accounts \'Fuel\', \'Car maintenance\', \'Insurance\'. Press \'OK\' and I\'ll
        do it for you.\n\n
        Note that categories are not mandatory and can be created, deleted, adjusted at any time.
    </string>

    <string name="intro_supplier">The next and last step is to create some suppliers, which represent the people or commodities you spend or earn from. These are not
        Following the previous example, you could create a \'Foo gas station\'. I\'ll do it for you.\n\n
        Suppliers are not mandatory, but the more specific you are, the more you\'ll get analitics data later.
    </string>

    <string name="intro_finished">That\'s all folks. You have basic accounts, categories and supplier, and you\'re ready to create more to adjust to your needs.\n\n
        Happy recording!
    </string>

    <string name="intro_account_fuel">Fuel</string>
    <string name="intro_account_maintenance">Car maintenance</string>
    <string name="intro_account_insurance">Car insurance</string>
    <string name="intro_category_car">Car</string>
    <string name="intro_entity_gas">Foo gas station</string>
    <string name="title_activity_settings">Settings</string>
</resources>
