<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dev.sr.myecotracker.RecordEditActivity" tools:Title="Test">

    <item
        android:id="@+id/action_saverecord"
        android:icon="@drawable/ic_check"
        android:title="@string/save"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_deleterecord"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_info" android:title="@string/action_info"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
