<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dev.sr.myecotracker.ReportActivity">

    <item
        android:id="@+id/action_newreg"
        android:icon="@drawable/ic_add"
        android:title="@string/create"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_accountlist"
        android:icon="@drawable/ic_account"
        android:title="@string/accounts"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_entitylist"
        android:icon="@drawable/ic_entity"
        android:title="@string/entities"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <!--
    <item
        android:id="@+id/action_backup"
        android:title="@string/backup"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restore"
        android:title="@string/restore"
        android:orderInCategory="100"
        app:showAsAction="never" />
    -->

    <item android:id="@+id/action_info" android:title="@string/action_info"
        android:orderInCategory="100" app:showAsAction="never" />


</menu>
