<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.stefano.ecotrack.EntityEditActivity">

    <item
        android:id="@+id/action_saveentity"
        android:icon="@drawable/button_check"
        android:title="@string/save"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_deleteentity"
        android:icon="@drawable/bin"
        android:title="@string/delete"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_info" android:title="@string/action_info"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
