<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.stefano.myecotracker.EntityListActivity">

    <item
        android:id="@+id/action_newentity"
        android:icon="@drawable/button_add"
        android:title="@string/create"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_accountlist"
        android:icon="@drawable/folder"
        android:title="@string/accounts"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_info" android:title="@string/action_info"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
