<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dev.sr.myecotracker.SearchActivity$PlaceholderFragment"
    android:shrinkColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgSP0"
            android:layout_column="0"
            android:src="@drawable/ic_account_black"
            android:maxHeight="32dp"
            android:maxWidth="32dp"
            android:scaleType="fitCenter" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnSearchAccount"
            android:layout_column="1"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgSP1"
            android:layout_column="0"
            android:src="@drawable/ic_entity_black"
            android:maxHeight="32dp"
            android:maxWidth="32dp"
            android:scaleType="fitCenter" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnSearchEntity"
            android:layout_column="1"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgSP2"
            android:layout_column="0"
            android:src="@drawable/ic_calendar_black"
            android:maxHeight="32dp"
            android:maxWidth="32dp"
            android:scaleType="fitCenter" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txtDateFrom"
            android:layout_column="1"
            android:hint="@string/datefrom" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgSP3"
            android:layout_column="0"
            android:src="@drawable/ic_calendar_black"
            android:maxHeight="32dp"
            android:maxWidth="32dp"
            android:scaleType="fitCenter" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txtDateTo"
            android:layout_column="1"
            android:hint="@string/dateto" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgSP4"
            android:layout_column="0"
            android:src="@drawable/ic_amount_black"
            android:maxHeight="32dp"
            android:maxWidth="32dp"
            android:scaleType="fitCenter" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txtAmountFrom"
            android:layout_column="1"
            android:hint="@string/amountfrom" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgSP5"
            android:layout_column="0"
            android:src="@drawable/ic_amount_black"
            android:maxHeight="32dp"
            android:maxWidth="32dp"
            android:scaleType="fitCenter" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txtAmountTo"
            android:layout_column="1"
            android:hint="@string/amountto" />
    </TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/btnSearch"
        android:layout_marginTop="20dp"
        android:onClick="updateResults" />
</TableLayout>
