<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dev.sr.myecotracker.RecordEditActivity"
    android:stretchColumns="2">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/date"
            android:id="@+id/textView5"
            android:layout_column="0"
            android:textColor="@color/text_color"
            android:layout_gravity="top" />

        <View style="@style/divider"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txtREDate"
            android:layout_column="2" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/account"
            android:id="@+id/textView6"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color" />

        <View style="@style/divider"
            android:layout_column="1" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnREAccount"
            android:layout_column="2"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgNewAccount"
            android:layout_column="3"
            android:src="@drawable/ic_add_black"
            android:maxHeight="32dp"
            android:maxWidth="32dp"
            android:scaleType="fitCenter"
            android:onClick="newAccount" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/entity"
            android:id="@+id/textView7"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color" />

        <View style="@style/divider"
            android:layout_column="1" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnREEntity"
            android:layout_column="2"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgNewEntity"
            android:layout_column="3"
            android:src="@drawable/ic_add_black"
            android:maxHeight="32dp"
            android:maxWidth="32dp"
            android:scaleType="fitCenter"
            android:onClick="newEntity" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/amount"
            android:id="@+id/textView8"
            android:layout_column="0"
            android:textColor="@color/text_color"
            android:layout_gravity="top" />

        <View style="@style/divider"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txtREAmount"
            android:layout_column="2" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/notes"
            android:id="@+id/textView15"
            android:layout_column="0"
            android:layout_gravity="top"
            android:textColor="@color/text_color" />

        <View style="@style/divider"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtREDescription"
            android:layout_column="2"
            android:inputType="textCapSentences|textMultiLine" />
    </TableRow>

</TableLayout>
