<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dev.sr.myecotracker.AccountEditActivity"
    android:stretchColumns="2"
    android:id="@+id/tableLayout">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description"
            android:id="@+id/textView10"
            android:layout_column="0"
            android:layout_gravity="top"
            android:textColor="@color/text_color" />

        <View style="@style/divider"
            android:layout_column="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtAccountDescr"
            android:layout_column="2"
            android:singleLine="true"
            android:inputType="textCapSentences" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/type"
            android:id="@+id/textView11"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color" />

        <View style="@style/divider"
            android:layout_column="1" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnAccountType"
            android:layout_column="2"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/categories"
            android:id="@+id/textView12"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color" />

        <View style="@style/divider"
            android:layout_column="1" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lstCategories"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
             />

    </TableRow>

</TableLayout>